# valmix

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  api.html  genindex.html  index.html  learn_curse.py  objects.inv  play_with_values.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  test_curses.py  test_textual.py  test_urwid.py  tox.ini  valmix.tcss
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: api.rst.txt  index.rst.txt
docs/: conf.py  environment.yml
examples/: many_values.py  tune_linear_function.py  two_values.py
tests/: test_app.py  test_knob.py  test_knob_widget.py  test_run.py
valmix/: __init__.py  app.py  knob.py  knob_widget.py  mixer.py  run.py
