[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "valmix"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@inria.fr"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@inria.fr"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "textual >=0.57.1",
]
keywords = ["multiprocessing", "value", "tui", "user", "interface"]

[project.urls]
Homepage = "https://github.com/stephane-caron/valmix"
Source = "https://github.com/stephane-caron/valmix"
Tracker = "https://github.com/stephane-caron/valmix/issues"
Changelog = "https://github.com/stephane-caron/valmix/blob/main/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "valmix"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.8"
numpy = "*"

[tool.pixi.tasks]
test = "python -m unittest discover --failfast"

[tool.pixi.environments]
default = { features = ["test"] }
coverage = { features = ["test", "coverage"] }
lint = { features = ["test", "lint"] }

[tool.pixi.feature.test.dependencies]
python = ">=3.8"
numpy = "*"

[tool.pixi.feature.coverage.dependencies]
coverage = { version = "*" }
numpy = "*"

[tool.pixi.feature.coverage.tasks]
coverage-erase = "coverage erase"
coverage-run = "coverage run -m unittest discover"
coverage-report = "coverage report --include='valmix/**' --rcfile=pyproject.toml"
coverage-html = "coverage html --include='valmix/*'"
coverage = { depends-on = ["coverage-erase", "coverage-run", "coverage-report", "coverage-html"] }

[tool.pixi.feature.lint.dependencies]
black = ">=22.10.0"
ruff = ">=0.2.2"
mypy = ">=0.812"
pylint = ">=2.8.2"

[tool.pixi.feature.lint.tasks]
black-check = "black --check --diff valmix"
mypy-check = "mypy valmix --config-file pyproject.toml"
pylint-check = "pylint valmix --exit-zero --rcfile=pyproject.toml"
ruff-check = "ruff check valmix"
ruff-format-check = "ruff format --check valmix"
lint = { depends-on = ["black-check", "mypy-check", "pylint-check", "ruff-check", "ruff-format-check"] }
